# OpenGL-Boilerplate

./: CMakeLists.txt  run.bat
libs/lib/: glfw3.lib
src/: main.cpp
